# ffmpeg-exam

./: CMakeLists.txt  README.md  libavformat.cpp
benchmark/: README.md
libavfilter/: CMakeLists.txt  README.md  amix.cpp  overlay.cpp  scale.cpp
libavformat/: CMakeLists.txt  input.cpp  input_dshow.cpp
wrap/: InputFormatContext.hpp  OutputFormatContext.hpp
